<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".SearchABook.SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:title="Recherche"
        app:titleTextColor="@color/textColorWhite">

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/parent_layout_padding">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/form_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_border"
                android:orientation="vertical"
                android:padding="@dimen/formular_layout_padding">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/titleInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TxtInputLayout">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/authorInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/txtInputLayoutsize"
                    android:theme="@style/TxtInputLayout">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/author"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/txtInputLayoutsize"
                    android:text="@string/language_titlte"
                    android:textColor="@color/textColorBlack" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/all_languages_button"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/all_languages_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/all" />

                    <RadioButton
                        android:id="@+id/english_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/english" />

                    <RadioButton
                        android:id="@+id/french_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/french" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/searchButton"
                style="@style/ButtonGrey"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/form_layout"
                android:text="@string/launch_search" />


        </RelativeLayout>
    </ScrollView>

</LinearLayout>