<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Accounts.PasswordMissedActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/get_password_lost"
            app:titleTextColor="@color/textColorWhite"
            android:background="@color/colorPrimaryDark">

        </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/form_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_border"
                android:orientation="vertical"
                android:padding="@dimen/formular_layout_padding">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/usernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TxtInputLayout">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_username"
                        android:drawableStart="@drawable/account"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/questionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/what_favorite_book_question"
                    android:textColor="@color/textColorBlack"
                    android:textStyle="bold"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/answerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TxtInputLayout"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_answer"
                        android:inputType="textMultiLine" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <Button
                android:id="@+id/valid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonGrey"
                android:text="@string/validate"

                android:layout_below="@+id/form_layout"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>