<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/update_account_activity_title"
        app:titleTextColor="@color/textColorWhite"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:padding="@dimen/parent_layout_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 1 -->
            <LinearLayout
                android:id="@+id/strInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_border"
                android:orientation="vertical"
                android:padding="@dimen/formular_layout_padding">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TxtInputLayout">

                    <EditText
                        android:id="@+id/firstnameUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/firstname"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TxtInputLayout">

                    <EditText
                        android:id="@+id/answerUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_favorite_book_title"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <!-- 2 -->
            <LinearLayout
                android:id="@+id/passwordUpdateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/form_border"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/changePasswordView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/down_arrow"
                    android:fontFamily="casual"
                    android:onClick="changePasswordLayoutVisibility"
                    android:text="@string/change_password"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TxtInputLayout"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/newPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TxtInputLayout"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <!-- 3 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/form_border">

                <TextView
                    android:id="@+id/changeImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:drawableStart="@drawable/down_arrow"
                    android:fontFamily="casual"
                    android:onClick="displayImageLayout"
                    android:text="@string/change_image"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/imageLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/changeImage"
                    android:layout_centerInParent="true"
                    android:padding="15dp">

                    <com.pkmmte.view.CircularImageView
                        android:id="@+id/avatar_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:onClick="changeAvatarImage"
                        android:src="@drawable/avatar_logo"
                        />


                </RelativeLayout>

            </RelativeLayout>

            <Button
                style="@style/ButtonGrey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="update"
                android:text="@string/update_personal_info" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>